crates/rumps-query/snapshots/scripts__139_function_hoisting.snap
---
source: crates/rumps-query/tests/scripts.rs
description: "; Function hoisting: forward references and mutual recursion\n\nfun main() {\n  ; Forward reference to function defined later\n  write add-one(5)\n\n  ; Mutual recursion\n  write is-even(4)\n  write is-even(7)\n  write is-odd(3)\n\n  ; Generic forward reference\n  write identity(\"hello\")\n  write identity(42)\n\n  ; Inference without return annotation\n  write double-it(10)\n\n  ; Block-local function hoisting\n  let result = {\n    let x = local-fn(5)\n    fun local-fn(n: Int) -> Int { n * 3 }\n    x\n  }\n  write result\n}\n\n; Definitions\n\nfun add-one(x: Int) -> Int { x + 1 }\n\nfun is-even(n: Int) -> Bool {\n  if n == 0 { true } else { is-odd(n - 1) }\n}\n\nfun is-odd(n: Int) -> Bool {\n  if n == 0 { false } else { is-even(n - 1) }\n}\n\nfun identity[T](x: T) -> T { x }\n\nfun double-it(n: Int) { n * 2 }\n"
---
6
true
false
true
"hello"
42
20
15
