crates/rumps-query/snapshots/scripts__140_module_hoisting.snap
---
source: crates/rumps-query/tests/scripts.rs
description: "; Module hoisting: forward references to modules\n\nfun main() {\n  ; Forward reference to module defined later\n  write M.get-value()\n  write M.add(10, 20)\n\n  ; Forward reference to nested module\n  write Outer.Inner.greet(\"world\")\n\n  ; Simple module function\n  write Utils.double(21)\n\n  ; Forward reference to module let constants\n  write Config.name\n  write Config.version\n\n  ; Forward reference to nested module constant\n  write Outer.Inner.prefix\n}\n\n; Definitions\n\nmodule M {\n  +fun get-value() -> Int { 42 }\n  +fun add(a: Int, b: Int) -> Int { a + b }\n}\n\nmodule Outer {\n  module Inner {\n    +fun greet(name: String) -> String { \"Hello, \" ++ name ++ \"!\" }\n    +let prefix: String = \"[Inner]\"\n  }\n}\n\nmodule Utils {\n  +fun double(n: Int) -> Int { n * 2 }\n}\n\nmodule Config {\n  +let name: String = \"TestApp\"\n  +let version: Int = 42\n}\n"
---
42
30
Hello, world!
42
TestApp
42
[Inner]
