crates/rumps-query/snapshots/scripts__141_module_mutual_recursion.snap
---
source: crates/rumps-query/tests/scripts.rs
description: "; Module-level mutual recursion: functions within a module calling each other\n\nMODULE Parity {\n    +FUN is-even(n: Int) -> Bool {\n        IF n == 0 { true } ELSE { is-odd(n - 1) }\n    }\n\n    +FUN is-odd(n: Int) -> Bool {\n        IF n == 0 { false } ELSE { is-even(n - 1) }\n    }\n}\n\n; Test mutual recursion via module path\n@OUTPUT Parity.is-even(0)\n@OUTPUT Parity.is-even(4)\n@OUTPUT Parity.is-even(7)\n@OUTPUT Parity.is-odd(0)\n@OUTPUT Parity.is-odd(3)\n@OUTPUT Parity.is-odd(6)\n\n; Nested module with mutual recursion\nMODULE Math {\n    MODULE Fibonacci {\n        ; Mutually recursive helper functions\n        +FUN fib(n: Int) -> Int {\n            IF n <= 1 { n } ELSE { fib-sum(n) }\n        }\n\n        FUN fib-sum(n: Int) -> Int {\n            fib(n - 1) + fib(n - 2)\n        }\n    }\n}\n\n@OUTPUT Math.Fibonacci.fib(0)\n@OUTPUT Math.Fibonacci.fib(1)\n@OUTPUT Math.Fibonacci.fib(10)\n"
---
TRUE
TRUE
FALSE
FALSE
TRUE
FALSE
0
1
55
