crates/rumps-query/snapshots/scripts__142_import.snap
---
source: crates/rumps-query/tests/scripts.rs
description: "; Test: IMPORT statement\n; Tests importing module members into local scope\n\n; All top-level imports must appear first\nIMPORT Math.{ floor, ceil, sqrt AS root, pi, e }\nIMPORT Math.Trig.{ sin AS sine, cos AS cosine }\nIMPORT Array.{ length, reverse }\nIMPORT Counter.{ new, inc }\nIMPORT Forward.{ id, val }\n\n; User module (defined after import due to hoisting)\nMODULE Counter {\n  LET start = 0\n  +FUN new() -> Int { start }\n  +FUN inc(n: Int) -> Int { n + 1 }\n}\n\n; Hoisted module (defined after import)\nMODULE Forward {\n  +LET val: Int = 42\n  +FUN id[T](x: T) -> T { x }\n}\n\n; Basic named import\nWRITE floor(3.7)\n; Expected: 3\n\n; Multiple named imports\nWRITE length([1, 2, 3])\n; Expected: 3\nWRITE reverse([1, 2, 3])\n; Expected: [ 3, 2, 1 ]\n\n; Wildcard import in nested scope (at top of scope)\n{\n  IMPORT String.{ ... }\n  WRITE length(\"hello\")\n  ; Expected: 5\n}\n\n; User module import\nLET c = new()\nWRITE c\n; Expected: 0\nWRITE inc(c)\n; Expected: 1\n\n; Wildcard with exclusion in nested scope\n{\n  IMPORT Math.{ ..., -floor }\n  WRITE ceil(1.1)\n  ; Expected: 2\n}\n\n; Import in nested scope does not leak\nLET x = 100\n{\n  IMPORT Math.{ floor }\n  WRITE floor(2.9)\n  ; Expected: 2\n}\nWRITE x\n; Expected: 100\n\n; ceil and floor from top-level imports\nWRITE ceil(4.1)\n; Expected: 5\nWRITE floor(4.9)\n; Expected: 4\n\n; Import inside function body (at top of function scope)\nFUN test() -> Int {\n  IMPORT Math.{ abs }\n  abs(-42)\n}\nWRITE test()\n; Expected: 42\n\n; AS alias from top-level import\nWRITE root(16.0)\n; Expected: 4.0\n\n; Multiple aliases from top-level import\nWRITE sine(0.0)\n; Expected: 0.0\nWRITE cosine(0.0)\n; Expected: 1.0\n\n; Import from hoisted module\nWRITE id(\"hoisted\")\n; Expected: \"hoisted\"\nWRITE val\n; Expected: 42\n\n; Import builtin module constants\nWRITE pi\n; Expected: 3.141592653589793\nWRITE e\n; Expected: 2.718281828459045\n"
---
3
3
[ 3, 2, 1 ]
5
0
1
2
2
100
5
4
42
4
0
1
"hoisted"
42
3.141592653589793
2.718281828459045
