crates/rumps-query/snapshots/scripts__144_numeric_conversions.snap
---
source: crates/rumps-query/tests/scripts.rs
description: "; Test: Explicit numeric conversions\n; Tests explicit `AS` conversions between numeric types\n; (implicit coercion between numeric types is NOT allowed)\n\n; Int AS Float\nLET f1 = 10 AS Float\nWRITE f1\n\n; Negative Int AS Float\nLET f2 = (-5) AS Float\nWRITE f2\n\n; Int AS Word (note: negative would fail at runtime; use READ for fallible)\nLET w1 = 42 AS Word\nWRITE w1\n\n; Float literal with Float annotation (trivial)\nLET f3: Float = 3.14\nWRITE f3\n\n; Int literal with Int annotation (trivial)\nLET i: Int = 100\nWRITE i\n\n; Expression result converted explicitly\nLET f4 = (10 + 5) AS Float\nWRITE f4\n\n; Word AS Int (always succeeds)\nLET w2: Word = 50\nLET i2 = w2 AS Int\nWRITE i2\n\n; Word AS Float (always succeeds)\nLET f5 = w2 AS Float\nWRITE f5\n"
---
ERROR: cannot cast `Int` to `Word`
